[GLOBAL] Created layout. [nrumtime] Started creation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,11 @@ project(nebula_lang)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(nebula_lang main.cpp)
+set(SOURCE_EXE main.cpp)
+
+include_directories(nruntime)
+
+add_executable(nebula_lang ${SOURCE_EXE})
+
+add_subdirectory(nruntime)
+target_link_libraries(nebula_lang nruntime)
