--- a/nebcc/CMakeLists.txt
+++ b/nebcc/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.19)
 
 project(nebcc)
 
-set(SOURCE_LIB )
+set(SOURCE_EXE nebcc.cpp)
 
-add_library(nebcc STATIC ${SOURCE_LIB})
+add_executable(nebcc ${SOURCE_EXE})
