[dstack] Added malloc error handling.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,6 @@ project(nebula_lang)
 
 set(CMAKE_CXX_STANDARD 20)
 
-include_directories(nebcc)
-include_directories(nruntime)
-
 add_subdirectory(nebcc)
 add_subdirectory(nruntime)
+add_subdirectory(examples)
